# jb-nosql-project

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml
scripts/: migrate.py  seed.py  setup.py
seed_data/: customers.json  historical_orders.json  products.json
src/ecommerce_pipeline/: db.py  db_access.py  postgres_models.py  reset.py
src/ecommerce_pipeline/api/: app.py
src/ecommerce_pipeline/api/routes/: analytics.py  customers.py  orders.py  products.py
src/ecommerce_pipeline/models/: requests.py  responses.py
tests/: conftest.py  test_phase1.py  test_phase1_integration.py  test_phase1_mongo.py  test_phase1_postgres.py  test_phase2.py  test_phase2_redis.py  test_phase3.py  test_phase3_neo4j.py
